@@ -36,6 +36,7 @@
 
 Minor TODOs:
 - Write more tests, for example, extracting archive with two files encrypted with different password.
+- Write test to use OutArchive more then ones before closing it. Verify, that all feature settings remains unchanged.
 - Test some untested archive formats
 - Support more archive formats
 - Write documentation / improve javadoc
@@ -48,6 +49,7 @@ Major TODOs:
 - Support 7-zip volumes (see INTERFACE_IArchiveUpdateCallback2)
 - Support ICompressProgressInfo
 - Generate random build number on each build not on each CMake run
+- Add Xz compression/decompression
 
 Info:
 - Quasijarus compression
