@@ -6,6 +6,10 @@ Release - 9.13-2.00alpha (Release candidate, cross-platform, based on zip/p7zip 
 	* Bind 7-Zip 9.13 beta
 	* Archive creation
 		- Creating archives: 7z, BZip2, Tar, Zip
+		
+	* API changes
+	    - Extend SevenZipException from IOException
+	    - Extend Closeable interface in IInArchive and IOutArchive
 
 
 Release - 4.65-1.06-extr-only (extraction only, cross-platform, based on zip/p7zip 4.65)
